Added Gallery Page and modified existing pages to match the mockup

--- a/memorial/about.html
+++ b/memorial/about.html
@@ -88,7 +88,7 @@
             <div class="row">
                <div class="col-md-10 offset-md-1">
                   <div class="aboutheading">
-                     <span>adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+                     <span>Established in 2010, Memorial has a wide range of books—prescient pop culture, heartfelt novels, page-turner thrillers, memorable memoirs, genre-defining franchises, smart self-help, and fearless cultural commentary—that engage, enlighten, and entertain.</span>
                   </div>
                </div>
             </div>
