--- a/memorial/gallery.html
+++ b/memorial/gallery.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
       <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/gallery-style.css">
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
@@ -76,7 +77,7 @@
             <div class="row">
                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                   <div class="abouttitle">
-                     <h2>Our Books</h2>
+                     <h2>Gallery</h2>
                   </div>
                </div>
             </div>
@@ -88,42 +89,83 @@
             <div class="row">
                <div class="col-md-10 offset-md-1">
                   <div class="titlepage">
-                     <!-- Changed Books Text -->
-                     <span>We present to you the highest quality of visual storytelling by championing the graphic novel format as a mainstream medium of art, literature, and entertainment. We promise fiction and nonfiction that inspires, challenges, and expands your reading experience.</span> 
+                     <span>We have a wide range of books—prescient pop culture, heartfelt novels, page-turner thrillers, memorable memoirs, genre-defining franchises, smart self-help, and fearless cultural commentary—that engage, enlighten, and entertain.</span> 
                   </div>
                </div>
             </div>
-            <div class="row box">
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <div class="book-box">
-                     <figure><img src="images/book-1.jpg" alt="img"/></figure>
-                  </div>
-               </div>
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                  <div class="book-box">
-                     <figure><img src="images/book-2.jpg" alt="img"/></figure>
-                  </div>
-               </div>
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <div class="book-box">
-                     <figure><img src="images/book-1.jpg" alt="img"/></figure>
-                  </div>
-               </div>
-               <!-- Added Books Text (and changed classes to match previous text) -->
-               <div class="col-md-10 offset-md-1">
-                  <p>We have a wide range of books—prescient pop culture, heartfelt novels, page-turner thrillers, memorable memoirs, genre-defining franchises, smart self-help, and fearless cultural commentary—that engage, enlighten, and entertain.</p>
-               </div>
+
+      <!-- Gallery -->
+      <div class="gallery-container">
+         <div class="gallery-image">
+            <img src="images/Book_1_Front.jpg" alt="All The Answers. By Michael Kupperman"/>
+         </div>
+         <div class="gallery-text">
+            <h3>All The Answers</h3>
+            <h4>By Michael Kupperman</h4>
+            <p>In This Moving Graphic Memoir, Eisner Award-Winning Writer And Artist Michael Kupperman Traces The Life Of His Reclusive Father—The Once-World-Famous Joel Kupperman, Quiz Kid. That His Father Is Slipping Into Dementia—Seems To Embrace It, Really—Means That The Past He Would Never Talk About Might Be Erased Forever.</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
             </div>
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-12">
-                     <div class="read-more">
-                        <!-- Changed Button Text and Link to Gallery Page -->
-                        <a href="gallery.html">View Gallery</a>
-                     </div>
-                  </div>
-               </div>
+            </div>  
+      </div>
+
+      <div class="gallery-container">
+         <div class="gallery-image">
+            <img src="images/Book_2_Front.jpg" alt="img"/>
+         </div>
+         <div class="gallery-text">
+            <h3>Alone</h3>
+            <h4>By Christophe Chabouté</h4>
+            <p>Available In English For The First Time—The Internationally Bestselling Graphic Novel And An Official Selection At France’s Prestigious Angoulême Internaional Comics Festival By Master Illustrator-Storyteller Chabouté (Park Bench, Moby-Dick).</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
             </div>
+         </div>  
+      </div>
+
+      <div class="gallery-container">
+         <div id="book-3" class="gallery-image">
+            <img src="images/Book_3_Front.jpg" alt="Amazing Fantastic Incredible, A Marvelous Memoir. By Stan Lee, Peter David And Colleen Doran"/>
+         </div>
+         <div class="gallery-text">
+            <h3>Amazing Fantastic Incredible<br>A Marvelous Memoir</h3>
+            <h4>By Stan Lee, Peter David And Colleen Doran</h4>
+            <p>In This Gorgeously Illustrated, Full-Color Graphic Memoir, Stan Lee—Comic Book Legend And Cocreator Of Spider-Man, The X-Men, The Avengers, The Incredible Hulk, And A Legion Of Other Marvel Superheroes—Shares His Iconic Legacy And The Story Of How Modern Comics Came To Be.</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
+             </div>
+         </div>  
+      </div>
+
+      <div class="gallery-container">
+         <div class="gallery-image">
+            <img src="images/Book_4_Front.jpg" alt="Creepshow. By Stephen King"/>
+         </div>
+         <div class="gallery-text">
+            <h3>Creepshow</h3>
+            <h4>By Stephen King</h4>
+            <p>The Graphic Novel Adaptation Of The Classic Horror Anthology Film Written By Stephen King, With Art By Bernie Wrightson!</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
+            </div>
+         </div>  
+      </div>
+
+      <div class="gallery-container">
+         <div class="gallery-image">
+            <img src="images/Book_5_Front.jpg" alt="Two Dead. By Van Jensen And Nate Powell"/>
+         </div>
+         <div class="gallery-text">
+            <h3>Two Dead</h3>
+            <h4>By Van Jensen And Nate Powell</h4>
+            <p>From The Acclaimed DC Comics Writer And The Artist Of The #1 New York Times Bestselling And National Book Award–Winning Illustrated Trilogy March Comes A Stunning Crime Noir Graphic Novel Exploring The Intertwining Threads Of Crime, Conspiracy, Racism, And Insanity In The Post-World War II Deep South.</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
+            </div>
+         </div>  
+      </div>
+               <!-- end Gallery -->
+
          </div>
       </div>
       <!-- end Books -->
@@ -171,4 +213,3 @@
       <script src="js/custom.js"></script>
    </body>
 </html>
-COPY TO CLIPBOARD    SELECT ALL
