--- a/memorial/index.html
+++ b/memorial/index.html
@@ -140,7 +140,8 @@
                <div class="col-md-10 offset-md-1">
                   <div class="aboutheading">
                      <h2>About <strong class="black">Us</strong></h2>
-                     <span>adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+                     <!-- Changed About Text -->
+                     <span>Established in 2010, Memorial has a wide range of books—prescient pop culture, heartfelt novels, page-turner thrillers, memorable memoirs, genre-defining franchises, smart self-help, and fearless cultural commentary—that engage, enlighten, and entertain.</span>
                   </div>
                </div>
             </div>
@@ -168,7 +169,8 @@
                <div class="col-md-10 offset-md-1">
                   <div class="titlepage">
                      <h2>Our <strong class="black">Library </strong></h2>
-                     <span>adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span> 
+                     <!-- Changed Library Text -->
+                     <span>The mission of the Memorial is to collect, catalog, conserve, enrich and communicate the national documentary heritage and ensures access for the greatest number of people to the collections on site and develops national and international cooperation.</span> 
                   </div>
                </div>
             </div>
@@ -186,9 +188,21 @@
          </div>
          <div class="container">
             <div class="row">
+               <div class="col-md-10 offset-md-1">
+                  <div class="titlepage Library">
+                     <!-- Added Events Title and Text -->
+                     <h2>Our <strong class="black">Events </strong></h2>
+                     <span>Exhibitions, conferences, visits, workshops, there is always something going on at the Memorial.</span> 
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row">
                <div class="col-md-12">
                   <div class="read-more">
-                     <a href="#">Read More</a>
+                     <!-- Changed Button Text and Link to Events Page -->
+                     <a href="events.html">Explore Events</a>
                   </div>
                </div>
             </div>
@@ -202,7 +216,8 @@
                <div class="col-md-10 offset-md-1">
                   <div class="titlepage">
                      <h2>Our <strong class="black">Books </strong></h2>
-                     <span>adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span> 
+                     <!-- Changed Books Text -->
+                     <span>We present to you the highest quality of visual storytelling by championing the graphic novel format as a mainstream medium of art, literature, and entertainment. We promise fiction and nonfiction that inspires, challenges, and expands your reading experience.</span> 
                   </div>
                </div>
             </div>
@@ -222,15 +237,17 @@
                      <figure><img src="images/book-1.jpg" alt="img"/></figure>
                   </div>
                </div>
-               <div class="col-md-6 offset-md-3">
-                  <p>magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris</p>
+               <!-- Added Books Text (and changed classes to match previous text) -->
+               <div class="col-md-10 offset-md-1">
+                  <p>We have a wide range of books—prescient pop culture, heartfelt novels, page-turner thrillers, memorable memoirs, genre-defining franchises, smart self-help, and fearless cultural commentary—that engage, enlighten, and entertain.</p>
                </div>
             </div>
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
                      <div class="read-more">
-                        <a href="#">Read More</a>
+                        <!-- Changed Button Text and Link to Gallery Page -->
+                        <a href="gallery.html">View Gallery</a>
                      </div>
                   </div>
                </div>
