--- a/memorial/library.html
+++ b/memorial/library.html
@@ -88,7 +88,8 @@
             <div class="row">
                <div class="col-md-10 offset-md-1">
                   <div class="titlepage">
-                     <span>adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span> 
+                     <!-- Changed Library Text -->
+                     <span>The mission of the Memorial is to collect, catalog, conserve, enrich and communicate the national documentary heritage and ensures access for the greatest number of people to the collections on site and develops national and international cooperation.</span> 
                   </div>
                </div>
             </div>
@@ -106,9 +107,21 @@
          </div>
          <div class="container">
             <div class="row">
+               <div class="col-md-10 offset-md-1">
+                  <div class="titlepage Library">
+                     <!-- Added Events Title and Text -->
+                     <h2>Our <strong class="black">Events </strong></h2>
+                     <span>Exhibitions, conferences, visits, workshops, there is always something going on at the Memorial.</span> 
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row">
                <div class="col-md-12">
                   <div class="read-more">
-                     <a href="#">Read More</a>
+                     <!-- Changed Button Text and Link to Events Page -->
+                     <a href="events.html">Explore Events</a>
                   </div>
                </div>
             </div>
