Added Events Page(html & css). Some adjustments to Gallery Page

--- a/memorial/events.html
+++ b/memorial/events.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
       <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/events-style.css">
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
@@ -28,7 +29,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
    <!-- body -->
-   <body class="main-layout Books-bg">
+   <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="images/loading.gif" alt="#" /></div>
@@ -54,8 +55,8 @@
                               <ul class="menu-area-main">
                                  <li > <a href="index.html">Home</a> </li>
                                  <li> <a href="about.html">About us</a> </li>
-                                 <li class="active"><a href="books.html">Our Books</a></li>
-                                 <li><a href="library.html">library</a></li>
+                                 <li><a href="books.html">Our Books</a></li>
+                                 <li class="active"><a href="library.html">library</a></li>
                                  <li><a href="contact.html">Contact us</a></li>
                                  <li class="mean-last"> <a href="#"><img src="images/search_icon.png" alt="#" /></a> </li>
                                  <li class="mean-last"> <a href="#"><img src="images/top-icon.png" alt="#" /></a> </li>
@@ -76,57 +77,52 @@
             <div class="row">
                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                   <div class="abouttitle">
-                     <h2>Our Books</h2>
+                     <h2>Our Events</h2>
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <!--Books -->
-      <div class="Books">
+      <!-- Library -->
+      <div class="Library">
          <div class="container">
-            <div class="row">
-               <div class="col-md-10 offset-md-1">
-                  <div class="titlepage">
-                     <!-- Changed Books Text -->
-                     <span>We present to you the highest quality of visual storytelling by championing the graphic novel format as a mainstream medium of art, literature, and entertainment. We promise fiction and nonfiction that inspires, challenges, and expands your reading experience.</span> 
-                  </div>
-               </div>
+            
+      <!-- Events -->
+      <div class="events-container">
+         <div class="events-image">
+            <img src="images/Event_1.jpg" alt="The Invention of Surrealism: From Magnetic Fields to Nadja"/>
+            <p>Opening hours : 10 a.m. - 7 p.m.<br>(Closed Sundays and holidays)</p>
+         </div>
+         <div class="events-text">
+            <h3>The Invention of Surrealism: From Magnetic Fields to Nadja</h3>
+            <h4>Dec 15 2020 -> Mar 14 2021</h4>
+            <p>The year 2020 marks the centenary of the publication by André Breton and Philippe Soupault of their joint collection, Les Champs magnétiques  - "the first purely surrealist work", André Breton would later say. On this occasion, the National Library of France and the Jacques-Doucet Literary Library combine the richness of their collections to present the first major exhibition devoted to literary surrealism.</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
             </div>
-            <div class="row box">
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <div class="book-box">
-                     <figure><img src="images/book-1.jpg" alt="img"/></figure>
-                  </div>
-               </div>
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                  <div class="book-box">
-                     <figure><img src="images/book-2.jpg" alt="img"/></figure>
-                  </div>
-               </div>
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <div class="book-box">
-                     <figure><img src="images/book-1.jpg" alt="img"/></figure>
-                  </div>
-               </div>
-               <!-- Added Books Text (and changed classes to match previous text) -->
-               <div class="col-md-10 offset-md-1">
-                  <p>We have a wide range of books—prescient pop culture, heartfelt novels, page-turner thrillers, memorable memoirs, genre-defining franchises, smart self-help, and fearless cultural commentary—that engage, enlighten, and entertain.</p>
-               </div>
+            </div>  
+      </div>
+
+      <hr class="solid">
+      
+      <div class="events-container">
+         <div class="events-image">
+            <img src="images/Event_2.jpg" alt="Francoise Petrovitch : Behind the eyelids"/>
+            <p>Opening hours : 10 a.m. - 7 p.m.<br>(Closed Sundays and holidays)</p>
+         </div>
+         <div class="events-text">
+            <h3>Francoise Petrovitch : Behind the eyelids</h3>
+            <h4>May 4. 2021 -> 14 aug. 2021</h4>
+            <p>From her first engravings at the end of the 1980s to the most recent research, Françoise Pétrovitch's protean work questions with as much subtlety as acuity the universe of childhood and adolescence, femininity or still privacy. Navigating between interiority and exteriority, anxiety and lightness, strength and fragility, the artist questions the ways of being in the world. Its singular line crisscrosses the in-between and tells the duality of existences.</p>
+            <div class="more-details">
+               <a href="#">More Details</a>
             </div>
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-12">
-                     <div class="read-more">
-                        <!-- Changed Button Text and Link to Gallery Page -->
-                        <a href="gallery.html">View Gallery</a>
-                     </div>
-                  </div>
-               </div>
-            </div>
+            </div>  
+      </div>
+
          </div>
       </div>
-      <!-- end Books -->
+      <!-- end Library -->
       <!-- footer -->
       <footer>
          <div class="footer">
