--- a/memorial/gallery.html
+++ b/memorial/gallery.html
@@ -77,7 +77,7 @@
             <div class="row">
                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                   <div class="abouttitle">
-                     <h2>Gallery</h2>
+                     <h2>Our Gallery</h2>
                   </div>
                </div>
             </div>
@@ -102,7 +102,7 @@
          <div class="gallery-text">
             <h3>All The Answers</h3>
             <h4>By Michael Kupperman</h4>
-            <p>In This Moving Graphic Memoir, Eisner Award-Winning Writer And Artist Michael Kupperman Traces The Life Of His Reclusive Father—The Once-World-Famous Joel Kupperman, Quiz Kid. That His Father Is Slipping Into Dementia—Seems To Embrace It, Really—Means That The Past He Would Never Talk About Might Be Erased Forever.</p>
+            <p>In This Moving Graphic Memoir, Eisner Award-Winning Writer And Artist Michael Kupperman Traces The Life Of His Reclusive Father—The Once-World-Famous Joel Kupperman, Quiz Kid. That His Father Is Slipping Into Dementia—Seems To Embrace It, Really—Means That The Past He Would Never Talk About Might Be Erased Forever.<br><br>in this moving graphic memoir, eisner award-winning writer and artist michael kupperman traces the life of his reclusive father—the once-world-famous joel kupperman, quiz kid. that his father is slipping into dementia—seems to embrace it, really—means that the past he would never talk about might be erased forever.</p>
             <div class="more-details">
                <a href="#">More Details</a>
             </div>
@@ -116,7 +116,7 @@
          <div class="gallery-text">
             <h3>Alone</h3>
             <h4>By Christophe Chabouté</h4>
-            <p>Available In English For The First Time—The Internationally Bestselling Graphic Novel And An Official Selection At France’s Prestigious Angoulême Internaional Comics Festival By Master Illustrator-Storyteller Chabouté (Park Bench, Moby-Dick).</p>
+            <p>Available In English For The First Time—The Internationally Bestselling Graphic Novel And An Official Selection At France’s Prestigious Angoulême Internaional Comics Festival By Master Illustrator-Storyteller Chabouté (Park Bench, Moby-Dick).<br><br>On a tiny lighthouse island far from the rest of the world, a lonely hermit lives out his existence. Every week a supply boat leaves provisions, its occupants never meeting him, never asking the obvious questions: Who are you? Why do you hide? Why do you never leave? What is it like to be so alone?</p>
             <div class="more-details">
                <a href="#">More Details</a>
             </div>
@@ -130,7 +130,7 @@
          <div class="gallery-text">
             <h3>Amazing Fantastic Incredible<br>A Marvelous Memoir</h3>
             <h4>By Stan Lee, Peter David And Colleen Doran</h4>
-            <p>In This Gorgeously Illustrated, Full-Color Graphic Memoir, Stan Lee—Comic Book Legend And Cocreator Of Spider-Man, The X-Men, The Avengers, The Incredible Hulk, And A Legion Of Other Marvel Superheroes—Shares His Iconic Legacy And The Story Of How Modern Comics Came To Be.</p>
+            <p>In This Gorgeously Illustrated, Full-Color Graphic Memoir, Stan Lee—Comic Book Legend And Cocreator Of Spider-Man, The X-Men, The Avengers, The Incredible Hulk, And A Legion Of Other Marvel Superheroes—Shares His Iconic Legacy And The Story Of How Modern Comics Came To Be.<br>Stan Lee is a man who needs no introduction. The most legendary name in the history of comic books, he was the leading creative force behind Marvel Comics, and brought to life—and into the mainstream—some of the world’s best-known heroes and most infamous villains throughout his career.</p>
             <div class="more-details">
                <a href="#">More Details</a>
              </div>
@@ -144,7 +144,7 @@
          <div class="gallery-text">
             <h3>Creepshow</h3>
             <h4>By Stephen King</h4>
-            <p>The Graphic Novel Adaptation Of The Classic Horror Anthology Film Written By Stephen King, With Art By Bernie Wrightson!</p>
+            <p>The Graphic Novel Adaptation Of The Classic Horror Anthology Film Written By Stephen King, With Art By Bernie Wrightson!<br><br>The graphic novel adaptation of Stephen King’s Creepshow, based on the 1982 horror anthology and cult classic film directed by George Romero (Night of the Living Dead, Dawn of the Dead)—and featuring stunning illustrations by the legendary Bernie Wrightson and cover art by the acclaimed Jack Kamen!</p>
             <div class="more-details">
                <a href="#">More Details</a>
             </div>
@@ -158,7 +158,7 @@
          <div class="gallery-text">
             <h3>Two Dead</h3>
             <h4>By Van Jensen And Nate Powell</h4>
-            <p>From The Acclaimed DC Comics Writer And The Artist Of The #1 New York Times Bestselling And National Book Award–Winning Illustrated Trilogy March Comes A Stunning Crime Noir Graphic Novel Exploring The Intertwining Threads Of Crime, Conspiracy, Racism, And Insanity In The Post-World War II Deep South.</p>
+            <p>From The Acclaimed DC Comics Writer And The Artist Of The #1 New York Times Bestselling And National Book Award–Winning Illustrated Trilogy March Comes A Stunning Crime Noir Graphic Novel Exploring The Intertwining Threads Of Crime, Conspiracy, Racism, And Insanity In The Post-World War II Deep South.<br><br>After World War II, tensions rise in a Southern city ruled by organized crime, touching countless residents as they struggle to make sense of the new world. A sudden act of violence sets off a series of bloody events between the police and mafia as they lash out against one another. As the violence worsens, desperation grows to stop it, by any means necessary.</p>
             <div class="more-details">
                <a href="#">More Details</a>
             </div>
